--- a/web/style.css
+++ b/web/style.css
@@ -99,7 +99,7 @@ h1 {
 
 .bottomBanner {
     /* background: linear-gradient(rgba(0,0,0,0.2),(rgba(0,0,0,0.2)),url(./img/footer.jpg)no-repeat; */
-    background: url("/img/footer.jpg")no-repeat;
+    background: url("../img/footer.jpg")no-repeat;
     background-size: cover;
     height: 80vh;
     width: 100%;
