--- a/web/style.css
+++ b/web/style.css
@@ -53,8 +53,9 @@
 
 /* Main section*/
 
+
 .main {
-    background: url('../img/lunch-unsplash.jpg')no-repeat;
+    background: url('../img/banner2.jpg')no-repeat;
     background-size: cover;
     height: 100vh;
     background-position: 50% 50%;
@@ -173,8 +174,26 @@ h1 {
     /* background: linear-gradient(rgba(0,0,0,0.2),(rgba(0,0,0,0.2)),url(./img/footer.jpg)no-repeat; */
     background: url("../img/contact.jpg")no-repeat;
     background-size: cover;
-    
+    border-radius: 60px;
     height: 80vh;
-    width: 100%;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    -webkit-box-shadow: 0px 0px 54px -12px rgba(0,0,0,1);
+-moz-box-shadow: 0px 0px 54px -12px rgba(0,0,0,1);
+box-shadow: 0px 0px 54px -12px rgba(0,0,0,1);
+}
+
+.contactusborder{
     
+    -webkit-box-shadow: 0px 0px 54px -12px rgba(0,0,205,1);
+-moz-box-shadow: 0px 0px 54px -12px rgba(0,0,205,1);
+box-shadow: 0px 0px 54px -12px rgba(0,0,205,1);
+}
+
+.contactustitle{
+    -webkit-box-shadow: 0px 0px 54px -12px rgba(0,0,205,1);
+    -moz-box-shadow: 0px 0px 54px -12px rgba(0,0,205,1);
+    box-shadow: 0px 0px 54px -12px rgba(0,0,205,1);
+    border-radius: 20px;
 }
